package e1;

public class Main {
    public static void main(String[] args) {
        new GUI();
    }
}
